--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -58,8 +58,8 @@
   font-weight: normal;
 }
 
-body {
-  /* background-color: #2c3e50 !important; */
+/* body {
+  background-color: #2c3e50 !important;
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
@@ -71,4 +71,4 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
