--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,9 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
 
   font-weight: normal;
 }
@@ -22,14 +22,14 @@ a,
 }
 
 @media (min-width: 1024px) {
-  body {
-    display: flex;
+  html,body {
+    /* display: flex; */
     place-items: center;
+    height: 100%;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    height: 100%;
+    background-color: rgb(252, 252, 252);
   }
 }
